--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,26 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius ipsam iure quam aperiam ipsum dolores saepe recusandae velit facilis in quas fuga molestias eos provident nemo, obcaecati unde itaque necessitatibus.
+	<header>
+		<a href="#"><img src="img/logo.png" alt="Domira_logo"></a>
+		<ul>
+			<li><a href="#">Главная</a></li>
+			<li><a href="#">О компании</a></li>
+			<li><a href="#">Новости</a></li>
+			<li><a href="#">Добрые дела</a></li>
+			<li class="drop"><a href="#">Domira Club</a>
+			<ul class="hidden">
+				<li><a href="#">Lorem</a></li>
+				<li><a href="#">Lorem</a></li>
+				<li><a href="#">Lorem</a></li>
+			</ul>
+			</li>
+			<li><a href="#">Работа</a></li>
+			<li><a href="#">Контакты</a></li>
+			<li class="blue_item video-camera"><a href="#">Domira TV</a></li>
+			<li class="blue_item star"><a href="#">Избранное</a></li>
+		</ul>
+	</header>
 	<script src="js/main.js"></script>
 	<script src="js/libs.min.js"></script>
 </body>
