header+footer mark up

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,79 @@
 			<li class="blue_item star"><a href="#">Избранное</a></li>
 		</ul>
 	</header>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aspernatur expedita earum placeat cum, labore, qui dicta temporibus maxime in ullam aliquam dolore quia ex nesciunt dignissimos illum, cupiditate dolores?
+	<footer>
+		<span>© 2016, Domira Development</span>
+	</footer>
+	<script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
 	<script src="js/main.js"></script>
 	<script src="js/libs.min.js"></script>
 </body>
