--- a/app/domiraTV.html
+++ b/app/domiraTV.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<div class="domiratv-container">
+<div class="container">
 
 <div class="breadcrumbs">
     <ul>
@@ -36,7 +36,7 @@
                         <img class="thumbnail" id="thumbnail1" >
                     </div>
                     <a class="start-video" data-id="mov1" href="javascript:void callPlayer(&quot;player1&quot;,&quot;playVideo&quot;)">
-                        <img class="start-video-play" src="images/play-btn.png">
+                        <img class="start-video-play" src="img/play-btn.png">
                     </a>
                     <div class="movie-media-control">
                         <a class="movie-media-control-pause" href="javascript:void callPlayer(&quot;player1&quot;,&quot;pauseVideo&quot;)"></a>
