--- a/app/news_domira.html
+++ b/app/news_domira.html
@@ -27,10 +27,107 @@
 			<li class="blue_item star"><a href="#">Избранное</a></li>
 		</ul>
 	</header>
+
+	<main>
+		<div class="container">
+		<div class="breadcrumbs">
+    	<ul>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Акции</a></li>
+    	</ul>
+		</div>
+		<div class="page-title">
+    	<h1>Акции</h1>
+		</div>
+			<div class="grid_items">
+				<div class="row">
+					<div class="col-md-4">
+						<div class="item">
+							<a class="item_image_wrapper" href="#">
+								<img src="img/510.png" alt="">
+							</a>
+							<div class="item_content_wrapper">
+								<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
+								<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
+								<span>03 марта 2017</span>
+								<a href="#" class="button">Подробнее</a>
+							</div>
+						</div>
+					</div>
+  				<div class="col-md-4">
+  					<div class="item">
+							<a class="item_image_wrapper" href="#">
+								<img src="img/510.png" alt="">
+							</a>
+							<div class="item_content_wrapper">
+								<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
+								<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
+								<span>03 марта 2017</span>
+								<a href="#" class="button">Подробнее</a>
+							</div>
+						</div>
+  				</div>
+  				<div class="col-md-4">
+  					<div class="item">
+							<a class="item_image_wrapper" href="#">
+								<img src="img/510.png" alt="">
+							</a>
+							<div class="item_content_wrapper">
+								<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
+								<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
+								<span>03 марта 2017</span>
+								<a href="#" class="button">Подробнее</a>
+							</div>
+						</div>
+  				</div>
+  				<div class="col-md-4">
+  					<div class="item">
+							<a class="item_image_wrapper" href="#">
+								<img src="img/510.png" alt="">
+							</a>
+							<div class="item_content_wrapper">
+								<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
+								<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
+								<span>03 марта 2017</span>
+								<a href="#" class="button">Подробнее</a>
+							</div>
+						</div>
+  				</div>
+  				<div class="col-md-4">
+  					<div class="item">
+							<a class="item_image_wrapper" href="#">
+								<img src="img/510.png" alt="">
+							</a>
+							<div class="item_content_wrapper">
+								<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
+								<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
+								<span>03 марта 2017</span>
+								<a href="#" class="button">Подробнее</a>
+							</div>
+						</div>
+  				</div>
+  				<div class="col-md-4">
+  					<div class="item">
+							<a class="item_image_wrapper" href="#">
+								<img src="img/510.png" alt="">
+							</a>
+							<div class="item_content_wrapper">
+								<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
+								<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
+								<span>03 марта 2017</span>
+								<a href="#" class="button">Подробнее</a>
+							</div>
+						</div>
+  				</div>
+				</div>
+			</div>
+		</div>
+	</main>
 	
 	<footer>
 		<span>© 2016, Domira Development</span>
 	</footer>
+
 	<script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
