--- a/app/stock_domira.html
+++ b/app/stock_domira.html
@@ -33,31 +33,31 @@
 		<div class="breadcrumbs">
     	<ul>
         <li><a href="#">Главная</a></li>
-        <li><a href="#">Новости</a></li>
+        <li><a href="#">Акции</a></li>
     	</ul>
 		</div>
 		<div class="page-title">
-    	<h1>Новости</h1>
+    	<h1>Акции</h1>
 		</div>
 			<div class="grid_items">
 				<div class="row">
 					<div class="col-md-4">
 						<div class="item">
 							<a class="item_image_wrapper" href="#">
-								<img src="img/515.png" alt="">
+								<img src="img/510.png" alt="">
 							</a>
 							<div class="item_content_wrapper">
 								<div class="box">
 									<div class="box__in">
-										<a class="" href="#">Щиро вітаємо Вас з Великоднем!</a>
+										<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
 									</div>
 								</div>
 								<div class="box box2">
 									<div class="box__in">
-										<p>Щиро вітаємо Вас з Великоднем! Бажаємо Вам радості, здоров’я, добробуту і благополуччя. Христос Воскрес!</p>
+										<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<span>03 марта 2017</span>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -65,20 +65,20 @@
   				<div class="col-md-4">
   					<div class="item">
 							<a class="item_image_wrapper" href="#">
-								<img src="img/515.png" alt="">
+								<img src="img/510.png" alt="">
 							</a>
 							<div class="item_content_wrapper">
 								<div class="box">
 									<div class="box__in">
-										<a class="" href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет</a>
+										<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
 									</div>
 								</div>
 								<div class="box box2">
 									<div class="box__in">
-										<p>Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора»</p>
+										<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<span>03 марта 2017</span>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -86,20 +86,20 @@
   				<div class="col-md-4">
   					<div class="item">
 							<a class="item_image_wrapper" href="#">
-								<img src="img/515.png" alt="">
+								<img src="img/510.png" alt="">
 							</a>
 							<div class="item_content_wrapper">
 								<div class="box">
 									<div class="box__in">
-										<a class="" href="#">Компания Domira Development поздравляет всех прекрасных дам с праздником весны</a>
+										<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
 									</div>
 								</div>
 								<div class="box box2">
 									<div class="box__in">
-										<p>Общеизвестным фактом стало то, что каждому участнику антитеррористической операции на востоке Украины Президент обещал обеспечение жильём или земельными участками.</p>
+										<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<span>03 марта 2017</span>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -107,20 +107,20 @@
   				<div class="col-md-4">
   					<div class="item">
 							<a class="item_image_wrapper" href="#">
-								<img src="img/515.png" alt="">
+								<img src="img/510.png" alt="">
 							</a>
 							<div class="item_content_wrapper">
 								<div class="box">
 									<div class="box__in">
-										<a class="" href="#">Щиро вітаємо Вас з Великоднем!</a>
+										<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
 									</div>
 								</div>
 								<div class="box box2">
 									<div class="box__in">
-										<p>Щиро вітаємо Вас з Великоднем! Бажаємо Вам радості, здоров’я, добробуту і благополуччя. Христос Воскрес!</p>
+										<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<span>03 марта 2017</span>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -128,20 +128,20 @@
   				<div class="col-md-4">
   					<div class="item">
 							<a class="item_image_wrapper" href="#">
-								<img src="img/515.png" alt="">
+								<img src="img/510.png" alt="">
 							</a>
 							<div class="item_content_wrapper">
 								<div class="box">
 									<div class="box__in">
-										<a class="" href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет</a>
+										<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
 									</div>
 								</div>
 								<div class="box box2">
 									<div class="box__in">
-										<p>Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора»</p>
+										<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<span>03 марта 2017</span>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -149,20 +149,20 @@
   				<div class="col-md-4">
   					<div class="item">
 							<a class="item_image_wrapper" href="#">
-								<img src="img/515.png" alt="">
+								<img src="img/510.png" alt="">
 							</a>
 							<div class="item_content_wrapper">
 								<div class="box">
 									<div class="box__in">
-										<a class="" href="#">Компания Domira Development поздравляет всех прекрасных дам с праздником весны</a>
+										<a class="" href="#">Внимание! Повышение цен с 20-го апреля!</a>
 									</div>
 								</div>
 								<div class="box box2">
 									<div class="box__in">
-										<p>Общеизвестным фактом стало то, что каждому участнику антитеррористической операции на востоке Украины Президент обещал обеспечение жильём или земельными участками. </p>
+										<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<span>03 марта 2017</span>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
