--- a/app/news_details_domira.html
+++ b/app/news_details_domira.html
@@ -30,24 +30,51 @@
 
 	<main>
 		<div class="container">
-		<div class="breadcrumbs">
-    	<ul>
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Новости</a></li>
-    	</ul>
-		</div>
-		<div class="page-title">
-    	<h1>В с.Счастливое открылся 
-крупнейший в Киевской 
-области супермарк</h1>
-		</div>
+			<div class="breadcrumbs">
+    		<ul>
+        	<li><a href="#">Главная</a></li>
+        	<li><a href="#">Новости</a></li>
+    		</ul>
+			</div>
+
+			<div class="main_content_details">
+				<div class="row">
+					<div class="col-md-6">
+						<div class="text_content_details">
+							<div class="page-title">
+    						<h1>В с.Счастливое открылся крупнейший в Киевской области супермарк</h1>
+							</div>
+							<span>03 марта 2017</span>
+							<div class="page_text_content">
+								<p>
+									Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора» площадь 687 кв.м. В супермаркете можно найти большой выбор свежей выпечки собственного производства (функционирует пекарня полного цикла). Также есть широкий ассортимент мяса, увеличен выбор сыров, колбас, рыбной продукции и других категорий товаров. Так же функционирует пиццерия. Магазин прекрасно подойдет для недельной семейной закупки.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="img_content_details">
+    					<img src="img/516.png" alt="img content details">
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<div class="grid_items">
 				<div class="row">
 					<div class="col-md-4">
 						<div class="item">
 							<div class="item_content_wrapper">
-								<a class="" href="#">Щиро вітаємо Вас з Великоднем!</a>
-								<p>Щиро вітаємо Вас з Великоднем! Бажаємо Вам радості, здоров’я, добробуту і благополуччя. Христос Воскрес!</p>
+								<div class="box">
+									<div class="box__in">
+										<a class="" href="#">Щиро вітаємо Вас з Великоднем!</a>
+									</div>
+								</div>
+								<div class="box box2">
+									<div class="box__in">
+										<p>Щиро вітаємо Вас з Великоднем! Бажаємо Вам радості, здоров’я, добробуту і благополуччя. Христос Воскрес!</p>
+									</div>
+								</div>
 								<span>03 марта 2017</span>
 								<a href="#" class="button">Подробнее</a>
 							</div>
@@ -56,9 +83,16 @@
   				<div class="col-md-4">
   					<div class="item">
 							<div class="item_content_wrapper">
-								<a class="" href="#">В с.Счастливое открылся крупнейший
-								в Киевской области супермаркет</a>
-								<p>Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора» </p>
+								<div class="box">
+									<div class="box__in">
+										<a class="" href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет</a>
+									</div>
+								</div>
+								<div class="box box2">
+									<div class="box__in">
+										<p>Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора» </p>
+									</div>
+								</div>
 								<span>02 марта 2017</span>
 								<a href="#" class="button">Подробнее</a>
 							</div>
@@ -67,8 +101,16 @@
   				<div class="col-md-4">
   					<div class="item">
 							<div class="item_content_wrapper">
-								<a class="" href="#">Компания Domira Development поздравляет всех прекрасных дам с праздником весны</a>
-								<p>Общеизвестным фактом стало то, что каждому участнику антитеррористической операции на востоке Украины Президент обещал обеспечение жильём или земельными участками. </p>
+							<div class="box">
+								<div class="box__in">
+									<a class="" href="#">Компания Domira Development поздравляет всех прекрасных дам с праздником весны</a>
+								</div>
+							</div>
+							<div class="box box2">
+								<div class="box__in">
+									<p>Общеизвестным фактом стало то, что каждому участнику антитеррористической операции на востоке Украины Президент обещал обеспечение жильём или земельными участками.</p>
+								</div>
+							</div>
 								<span>02 марта 2017</span>
 								<a href="#" class="button">Подробнее</a>
 							</div>
