--- a/app/about_domira.html
+++ b/app/about_domira.html
@@ -42,16 +42,27 @@
 					<div class="col-md-6">
 						<div class="text_content">
 							<div class="page-title">
-    						<h1>О компании</h1>
+    						<h2>О компании</h2>
 							</div>
 							<div class="page_text_content">
 								<p>
 									В то время, как многие игроки рынка недвижимости исчезают, не выдерживая высокого темпа и конкуренции, мы решили развиваться, ведь там, где одни видят трудности, другие находят возможности. Именно поэтому наша команда состоит из лучших специалистов в сфере строительства и девелопмента. И, хотя мы - молодая девелоперская компания, совокупный опыт реализованных нашей командой проектов - огромен! Наша цель – работать на опережение, используя инновации и лучшие современные технологии.
-									<br><br>Проекты Domira Development – это всегда неординарное, безупречное и слаженное выполнение всех поставленных задач на высочайшем уровне качества настоящими профессионалами своего дела
+									</p>
+									<p>Проекты Domira Development – это всегда неординарное, безупречное и слаженное выполнение всех поставленных задач на высочайшем уровне качества настоящими профессионалами своего дела
 								</p>
 							</div>
 						</div>
-						<div class="text_content text_content2">
+						<div class="text_content">
+							<div class="page-title">
+    						<h2>Новый подход к жилой недвижимости</h2>
+							</div>
+							<div class="page_text_content">
+								<p>
+									Кроме интересных архитектурных и функциональных решений, каждый жилой комплекс, построенный нами, предполагает уникальную для сферы жилищного строительства клубную форму домовладения. Мы верим, что каждому дому нужен хозяин, а, значит, управлять им должен каждый из вас.
+								</p>
+							</div>
+							</div>
+							<div class="text_content">
 							<div class="page-title">
     						<h2>Новый подход к жилой недвижимости</h2>
 							</div>
